# DataFeedHub

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build-tests-mingw.bat  run-all-tests.bat
cmake/: DFHConfig.cmake.in
cmake/lint/: check_no_reverse_includes.cmake
docs/: STYLE-GUIDE-RU.md
include/DataFeedHub/: compression.hpp  data.hpp  dfh.hpp  storage.hpp  transform.hpp  utils.hpp
include/DataFeedHub/compression/: bars.hpp  ticks.hpp  utils.hpp
include/DataFeedHub/compression/bars/: BarBinarySerializerV1.hpp  BarSerializer.hpp  IBarSerializer.hpp
include/DataFeedHub/compression/ticks/: ITickSerializer.hpp  TickBinarySerializerV1.hpp  TickCompressorV1.hpp  TickSerializer.hpp  TradeIdCodec.hpp
include/DataFeedHub/compression/ticks/TickCompressorV1/: TickCompressionContextV1.hpp  TickDecoderV1.hpp  TickEncoderV1.hpp  zstd_dict_102400.hpp
include/DataFeedHub/compression/utils/: frequency_encoding.hpp  volume_scaling.hpp  zig_zag.hpp  zig_zag_delta.hpp  zstd_utils.hpp
include/DataFeedHub/core/: IMarketDataSource.hpp  MarketDataBuffer.hpp  MarketDataBus.hpp  MarketDataListener.hpp  MarketDataMediator.hpp  MarketSnapshot.hpp  Subscriber.hpp  TradingContext.hpp  TradingStrategy.hpp
include/DataFeedHub/core/MarketDataBuffer/: ISpreadProcessor.hpp  NoneSpreadProcessor.hpp  StreamTickBuffer.hpp
include/DataFeedHub/core/data_feed/: DataFeed.hpp  FundingDB.hpp
include/DataFeedHub/core/funding/: funding_calc.hpp
include/DataFeedHub/data/: bars.hpp  common.hpp  funding.hpp  ticks.hpp  trading.hpp
include/DataFeedHub/data/bars/: BarCodecConfig.hpp  BarMetadata.hpp  BarSequence.hpp  MarketBar.hpp  OHLCBar.hpp  OHLCVBar.hpp  SingleBar.hpp  enums.hpp  flags.hpp
include/DataFeedHub/data/common/: enum_utils.hpp  enums.hpp
include/DataFeedHub/data/funding/: FundingDetails.hpp  FundingMetadata.hpp  FundingRate.hpp  FundingRateInfo.hpp  FundingRateSequence.hpp  enums.hpp
include/DataFeedHub/data/ticks/: BidAskRestoreConfig.hpp  MarketTick.hpp  QuoteTick.hpp  QuoteTickConversions.hpp  QuoteTickL1.hpp  QuoteTickVol.hpp  README-RU.md  SimpleTick.hpp  SingleTick.hpp  TickCodecConfig.hpp  TickConversions.hpp  TickJson.hpp  TickMetadata.hpp  TickSequence.hpp  TickSpan.hpp  TradeTick.hpp  ValueTick.hpp  enums.hpp  flags.hpp
include/DataFeedHub/data/trading/: OrderRequest.hpp  OrderResult.hpp  TradeRequest.hpp  TradeResult.hpp  enums.hpp
include/DataFeedHub/interfaces/: IConnectionDB.hpp  ITradingInterface.hpp
include/DataFeedHub/src/: compression.hpp  structures.hpp  utils.hpp
include/DataFeedHub/src/compression/: ticks.hpp  utils.hpp
include/DataFeedHub/src/compression/ticks/: TickCompressorV1.hpp
include/DataFeedHub/src/compression/utils/: frequency_encoding.hpp  repeat_encoding.hpp  volume_scaling.hpp  zig_zag.hpp  zig_zag_delta.hpp  zstd_utils.hpp
include/DataFeedHub/src/core/: MarketDataBuffer.hpp  MarketDataBus.hpp  MarketDataListener.hpp  Subscriber.hpp  TradingContext.hpp
include/DataFeedHub/src/core/MarketDataBuffer/: DynamicSpreadProcessor.hpp  FixedSpreadProcessor.hpp  MedianSpreadProcessor.hpp  StreamTickBuffer.hpp
include/DataFeedHub/src/interfaces/: IConfigDB.hpp
include/DataFeedHub/src/storage/: DatabaseException.hpp
include/DataFeedHub/src/storage/config/: SQLiteConfig.hpp
include/DataFeedHub/src/storage/connection/: SQLiteConnection.hpp
include/DataFeedHub/src/structures/: funding.hpp  ticks.hpp
include/DataFeedHub/src/structures/funding/: FundingRate.hpp  FundingRatePair.hpp
include/DataFeedHub/src/structures/snapshot/: MarketSnapshot.hpp
include/DataFeedHub/src/utils/: DynamicBitset.hpp  aligned_allocator.hpp  binance_parser.hpp  bybit_parser.hpp  fixed_point.hpp  math_utils.hpp  simdcomp.hpp  sse_double_int64_utils.hpp  string_utils.hpp  vbyte.hpp  zip_utils.hpp
include/DataFeedHub/storage/: common.hpp  factory.hpp  mdbx.hpp
include/DataFeedHub/storage/common/: MarketDataStorageHub.hpp  StorageException.hpp  StorageMetadata.hpp  TransactionGuard.hpp  enums.hpp  flags.hpp  interfaces.hpp
include/DataFeedHub/storage/mdbx/: MDBXConfig.hpp  MDBXConnection.hpp  MDBXMarketDataStorage.hpp  MDBXTransaction.hpp
include/DataFeedHub/storage/sqlite3/: SQLiteConfig.hpp  SQLiteConnection.hpp  SQLiteStorage.hpp
include/DataFeedHub/transform/: bars.hpp  common.hpp
include/DataFeedHub/transform/bars/: bar_crop.hpp  bar_gap_filler.hpp  resample_market_bars.hpp  split_bars.hpp
include/DataFeedHub/transform/common/: crop_by_time.hpp
include/DataFeedHub/utils/: DynamicBitset.hpp  aligned_allocator.hpp  binance_parser.hpp  bybit_parser.hpp  enum_utils.hpp  fixed_point.hpp  math_utils.hpp  simdcomp.hpp  string_utils.hpp  symbol_key_utils.hpp  vbyte.hpp  zip_utils.hpp
libs/: CMakeLists.txt
libs/cmake/: minizip-ng-config.cmake
tests/: test_compare_price_processing.cpp  test_compression_efficiency.cpp  test_compression_suite.cpp  test_compression_suite2.cpp  test_data_ticks_headers_compile.cpp  test_data_umbrella_headers_compile.cpp  test_dependencies.cpp  test_dynamic_bitset.cpp  test_frequency_encoding.cpp  test_header_smoke_ticks.cpp  test_market_data_storage.cpp  test_market_tick_serializer.cpp  test_market_tick_serializer_file.cpp  test_market_tick_serializer_time.cpp  test_repeat_encoding.cpp  test_stream_tick_buffer.cpp  test_tick_codec_compat_market_tradebased_to_trade.cpp  test_tick_codec_compat_trade_to_market.cpp  test_tick_codec_market_roundtrip.cpp  test_tick_codec_quote_roundtrip.cpp  test_tick_codec_quotel1_roundtrip.cpp  test_tick_codec_quotevol_roundtrip.cpp  test_tick_codec_trade_roundtrip.cpp  test_tick_compression.cpp  test_tick_compressor_v1.cpp  test_tick_conversions_roundtrip.cpp  test_tick_json_roundtrip.cpp  test_trade_id_codec.cpp  test_vbyte_simdcomp.cpp  test_zigzag_delta.cpp  test_zip_utils.cpp  zstd_dictionary_trainer.cpp
tests/header_compile/: include_data_umbrella.cpp  include_market_tick.cpp  include_quote_tick.cpp  include_quote_tick_l1.cpp  include_quote_tick_vol.cpp  include_tick_codec_config.cpp  include_tick_conversions.cpp  include_tick_json.cpp  include_trade_tick.cpp
(+35 files in other folders)
